<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>3</version>
    </parent>

    <groupId>com.github.yujiaao</groupId>
    <artifactId>c-tools-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.1.0-RC1</version>

    <modules>
        <module>c-tools-bom</module>
        <module>c-dbtools</module>
        <module>c-tools</module>
        <module>c-jmesa</module>
        <module>c-cache</module>
        <module>c-tablegen</module>
        <module>c-tablegen-mojo</module>
        <module>c-tablegen-demo</module>
    </modules>
    <properties>
        <jackson-databind.version>2.10.4</jackson-databind.version>
        <web-access-limit>1.1.9</web-access-limit>
        <justauth-spring.version>1.1.0</justauth-spring.version>
        <junitVersion>5.7.0</junitVersion>
        <currentVersion>1.1.0-RC1</currentVersion>
        <springboot.version>2.3.8.RELEASE</springboot.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencyManagement>

    </dependencyManagement>
    <dependencies>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.47</version>
            <scope>test</scope>
        </dependency>


    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <formats>
                        <format>html</format>
                        <format>xml</format>
                    </formats>
                    <check />
                </configuration>
            </plugin>
        </plugins>

    </build>



    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>

    </reporting>




    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>
